--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
     <div class="desc">NIKE AIR MORE UPTEMPO 96
     </div>
   </div>
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE AIR MORE UPTEMPO 96.jpg">
+      <img src="images/NIKE AIR MORE UPTEMPO 96.jpg" alt="Mountains" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MORE UPTEMPO 96
+    </div>
+  </div>
 
 </body>
 
