--- a/index.html
+++ b/index.html
@@ -39,16 +39,13 @@
 <body>
   <center>
     <ul>
-      <li><a href="home.html">Home</a></li>
+      <a href="/">
+        <div class="logo">
 
-
-
-
-      <li><a href="news.html">News</a></li>
-
-
-
-      <li><a href="contact.html">Contact</a></li>
+          <img src="images/flash.png" height="44px">
+          <h2 style="color: rgb(241, 199, 14);">FlashDress</h2>
+        </div>
+      </a>
 
 
 
@@ -68,15 +65,18 @@
     <a target="_blank" href="images/Viper pro max.jpg">
       <img src="images/Viper pro max.jpg" alt="Forest" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR VAPORMAX 2021FK</div>
+    <div class="desc">NIKE AIR VAPORMAX  <a href="obuvki/vipermax.html" target="_blank">More...</a>
+    </div>
+
   </div>
+
 
   <div class="gallery">
     <a target="_blank" href="images/NIKE AIR MAX 90 365.jpg">
       <img src="images/NIKE AIR MAX 90 365.jpg" alt="Northern Lights" width="600" height="600">
     </a>
     <div class="desc">NIKE AIR MAX 90 365
-      <a href="90.html" target="_blank">More...</a>
+      <a href="obuvki/90.html" target="_blank">More...</a>
     </div>
   </div>
 
@@ -118,5 +118,6 @@
     <div class="desc">NIKE AIR MORE UPTEMPO 96
     </div>
   </div>
-  </body>
+</body>
+
 </html>
