--- a/obuvki/vipermax.html
+++ b/obuvki/vipermax.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> NIKE AIR MAX 90 365 </title>
+    <title> Nike Viper Max </title>
 <style>
     body {
-    background-image: url('images/cloud3.jpg');
+    background-image: url('/images/cloud3.jpg');
     background-position: center;
     background-size: cover; 
     }
@@ -28,7 +28,7 @@
 <body>
     <div class="div">
      
-    <img src="images/NIKE AIR MAX 90 365.jpg"  width="500" height="500"> 
+    <img src="/images/Viper pro max.jpg"  width="500" height="500"> 
    <div class="div2">
     <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
     <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gale-sport</a>
