--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <a target="_blank" href="images/nike air max 270.jpg">
       <img src="images/nike air max 270.jpg" alt="Cinque Terre" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR MAX 270</div>
+    <div class="desc">NIKE AIR MAX 270  <a href="obuvki/270.html" target="_blank">More...</a>
+    </div>
   </div>
 
   <div class="gallery">
@@ -67,7 +68,6 @@
     </a>
     <div class="desc">NIKE AIR VAPORMAX  <a href="obuvki/vipermax.html" target="_blank">More...</a>
     </div>
-
   </div>
 
 
@@ -84,14 +84,15 @@
     <a target="_blank" href="images/nike coart vision.jpg">
       <img src="images/nike coart vision.jpg" alt="Mountains" width="600" height="600">
     </a>
-    <div class="desc">NIKE COURT VISION LO NN</div>
+    <div class="desc">NIKE COURT VISION  <a href="obuvki/coart.html" target="_blank">More...</a>
+    </div>
   </div>
 
   <div class="gallery">
     <a target="_blank" href="images/NIKE AIR MAX 95.jpg">
       <img src="images/NIKE AIR MAX 95.jpg" alt="Cinque Terre" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR MAX 95
+    <div class="desc">NIKE AIR MAX 95  <a href="obuvki/95.html" target="_blank">More...</a>
     </div>
   </div>
 
@@ -99,7 +100,7 @@
     <a target="_blank" href="images/NIKE AIR MAX TW.jpg">
       <img src="images/NIKE AIR MAX TW.jpg" alt="Forest" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR MAX TW
+    <div class="desc">NIKE AIR MAX TW  <a href="obuvki/TW.html" target="_blank">More...</a>
     </div>
   </div>
 
@@ -107,7 +108,7 @@
     <a target="_blank" href="images/Nike Air Max 97.jpg">
       <img src="images/Nike Air Max 97.jpg" alt="Northern Lights" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR MAX 97
+    <div class="desc">NIKE AIR MAX 97  <a href="obuvki/97.html" target="_blank">More...</a>
     </div>
   </div>
 
@@ -115,7 +116,23 @@
     <a target="_blank" href="images/NIKE AIR MORE UPTEMPO 96.jpg">
       <img src="images/NIKE AIR MORE UPTEMPO 96.jpg" alt="Mountains" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR MORE UPTEMPO 96
+    <div class="desc">NIKE AIR UPTEMPO   <a href="obuvki/uptemo.html" target="_blank">More...</a> 
+    </div>
+  </div>
+ 
+  <div class="gallery">
+    <a target="_blank" href="images/Nike React Vision.jpg">
+      <img src="images/Nike React Vision.jpg" alt="Mountains" width="600" height="600">
+    </a>
+    <div class="desc">NIKE REACT  <a href="obuvki/react.html" target="_blank">More...</a> 
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/Nike Air Max Dawn.jpg">
+      <img src="images/Nike Air Max Dawn.jpg" alt="Mountains" width="600" height="600">
+    </a>
+    <div class="desc">NIKE Air Max dawn   <a href="obuvki/dawn.html" target="_blank">More...</a>  
     </div>
   </div>
 </body>
