--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
     
     
           <li style="float:right"><a class="active" href="about.html">About</a></li>
+          <li style="float:right"><a class="active" href="Girl's shoes.html">Girls's shoes</a></li>
+      <li style="float:right"><a class="active" href="Men's shoes.html">Men's shoes</a></li>
         </ul>
       </center>
     <div class="about"> 
