--- a/Girl's shoes.html
+++ b/Girl's shoes.html
@@ -11,6 +11,10 @@
 
 
   <style>
+    body{
+    background-image: url('images/cloud3.jpg');
+
+   }
     div.gallery {
       margin: 3px;
       border: 1px solid #ccc;
@@ -46,9 +50,6 @@
           <h2 style="color: rgb(241, 199, 14);">FlashDress</h2>
         </div>
       </a>
-
-
-      
       <li style="float:right"><a class="active" href="about.html">About</a></li>
       <li style="float:right"><a class="active" href="Girl's shoes.html">Girls's shoes</a></li>
       <li style="float:right"><a class="active" href="Men's shoes.html">Men's shoes</a></li>
