--- a/Men's shoes.html
+++ b/Men's shoes.html
@@ -11,7 +11,11 @@
 
 
   <style>
-    div.gallery {
+   body{
+    background-image: url('images/cloud3.jpg');
+
+   }
+   div.gallery {
       margin: 3px;
       border: 1px solid #ccc;
       float: left;
