--- a/index.html
+++ b/index.html
@@ -11,27 +11,7 @@
 
 
   <style>
-    div.gallery {
-      margin: 3px;
-      border: 1px solid #ccc;
-      float: left;
-      width: 180px;
-      height: 240px;
-    }
-
-    div.gallery:hover {
-      border: 1px solid #777;
-    }
-
-    div.gallery img {
-      width: 100%;
-      height: auto;
-    }
-
-    div.desc {
-      padding: 15px;
-      text-align: center;
-    }
+    
   </style>
 
 </head>
@@ -47,143 +27,14 @@
         </div>
       </a>
 
-
       
       <li style="float:right"><a class="active" href="about.html">About</a></li>
       <li style="float:right"><a class="active" href="Girl's shoes.html">Girls's shoes</a></li>
       <li style="float:right"><a class="active" href="Men's shoes.html">Men's shoes</a></li>
     </ul>
   </center>
-
-
-  <div class="gallery">
-    <a target="_blank" href="images/nike air max 270.jpg">
-      <img src="images/nike air max 270.jpg" alt="Cinque Terre" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR MAX 270  <a href="obuvki/270.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Viper pro max.jpg">
-      <img src="images/Viper pro max.jpg" alt="Forest" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR VAPORMAX  <a href="obuvki/vipermax.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-
-  <div class="gallery">
-    <a target="_blank" href="images/NIKE AIR MAX 90 365.jpg">
-      <img src="images/NIKE AIR MAX 90 365.jpg" alt="Northern Lights" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR MAX 90 365
-      <a href="obuvki/90.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/nike coart vision.jpg">
-      <img src="images/nike coart vision.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE COURT VISION  <a href="obuvki/coart.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/NIKE AIR MAX 95.jpg">
-      <img src="images/NIKE AIR MAX 95.jpg" alt="Cinque Terre" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR MAX 95  <a href="obuvki/95.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/NIKE AIR MAX TW.jpg">
-      <img src="images/NIKE AIR MAX TW.jpg" alt="Forest" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR MAX TW  <a href="obuvki/TW.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max 97.jpg">
-      <img src="images/Nike Air Max 97.jpg" alt="Northern Lights" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR MAX 97  <a href="obuvki/97.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/NIKE AIR MORE UPTEMPO 96.jpg">
-      <img src="images/NIKE AIR MORE UPTEMPO 96.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR UPTEMPO   <a href="obuvki/uptemo.html" target="_blank">More...</a> 
-    </div>
-  </div>
- 
-  <div class="gallery">
-    <a target="_blank" href="images/Nike React Vision.jpg">
-      <img src="images/Nike React Vision.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE REACT  <a href="obuvki/react.html" target="_blank">More...</a> 
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max Dawn.jpg">
-      <img src="images/Nike Air Max Dawn.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air Max dawn   <a href="obuvki/dawn.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max Flyknit Racer.jpg">
-      <img src="images/Nike Air Max Flyknit Racer.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air Max Flyknit   <a href="obuvki/racer.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Huarache.jpg">
-      <img src="images/Nike Air Huarache.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air huarache   <a href="obuvki/huarache.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Force 1.jpg">
-      <img src="images/Nike Air Force 1.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air force 1   <a href="obuvki/force.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max 2090.jpg">
-      <img src="images/Nike Air Max 2090.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air Max 2090  <a href="obuvki/2090.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max 2021.jpg">
-      <img src="images/Nike Air Max 2021.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air Max 2021  <a href="obuvki/2021.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max SC.jpg">
-      <img src="images/Nike Air Max SC.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air Max SC  <a href="obuvki/SC.html" target="_blank">More...</a>  
-    </div>
+  <div style="margin-top: 150px; text-align: center;">
+    <h1 style="color: white;font-size: 100px;">Welcome to FlashDress!</h1>
   </div>
 </body>
 </html>
