--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>FlashDress</title>
   <link rel="shortcut icon" href="images/flash.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-
+  <link href='https://fonts.googleapis.com/css?family=Lilita One' rel='stylesheet'>
 
   <style>
     
@@ -34,7 +34,7 @@
     </ul>
   </center>
   <div style="margin-top: 150px; text-align: center;">
-    <h1 style="color: white;font-size: 100px;">Welcome to FlashDress!</h1>
+    <h1 style="color: white;font-size: 100px; font-family: 'Lilita One';">Welcome to FlashDress!</h1>
   </div>
 </body>
 </html>
