--- a/Girl's shoes.html
+++ b/Girl's shoes.html
@@ -55,30 +55,86 @@
       <li style="float:right"><a class="active" href="Men's shoes.html">Men's shoes</a></li>
     </ul>
   </center>
-
-
   <div class="gallery">
-    <a target="_blank" href="images/nike air max 270.jpg">
-      <img src="images/nike air max 270.jpg" alt="Cinque Terre" width="600" height="600">
+    <a target="_blank" href="images/Nike W Air max Furyosa.jpg">
+      <img src="images/Nike W Air max Furyosa.jpg" alt="Cinque Terre" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR MAX 270  <a href="obuvki/270.html" target="_blank">More...</a>
+    <div class="desc">NIKE W AIR MAX FURYOSA  <a href="obuvki/furyosa.html" target="_blank">More...</a>
+    </div>
+  </div>
+ 
+  <div class="gallery">
+    <a target="_blank" href="images/Nike Air Max 270 girl.jpg">
+      <img src="images/Nike Air Max 270 girl.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MAX 270 <a href="obuvki/270girl.html" target="_blank">More...</a>
     </div>
   </div>
 
   <div class="gallery">
-    <a target="_blank" href="images/Viper pro max.jpg">
-      <img src="images/Viper pro max.jpg" alt="Forest" width="600" height="600">
+    <a target="_blank" href="images/Nike Air Max intrlk.jpg">
+      <img src="images/Nike Air Max intrlk.jpg" alt="Cinque Terre" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR VAPORMAX  <a href="obuvki/vipermax.html" target="_blank">More...</a>
+    <div class="desc">NIKE AIR MAX INTRLK<a href="obuvki/intrlk.html" target="_blank">More...</a>
     </div>
-  </div>
-
+  </div>   
 
   <div class="gallery">
-    <a target="_blank" href="images/NIKE AIR MAX 90 365.jpg">
-      <img src="images/NIKE AIR MAX 90 365.jpg" alt="Northern Lights" width="600" height="600">
+    <a target="_blank" href="images/Nike Air Max zoom arcadia.jpg">
+      <img src="images/Nike Air Max zoom arcadia.jpg" alt="Cinque Terre" width="600" height="600">
     </a>
-    <div class="desc">NIKE AIR MAX 90 365
-      <a href="obuvki/90.html" target="_blank">More...</a>
+    <div class="desc">NIKE AIR MAX ZOOM <a href="obuvki/arcadia.html" target="_blank">More...</a>
     </div>
   </div>
+  
+  <div class="gallery">
+    <a target="_blank" href="images/Nike Air Max Bella.jpg">
+      <img src="images/Nike Air Max Bella.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MAX BELLA<a href="obuvki/bella.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/Nike Air Vapermax pink.jpg">
+      <img src="images/Nike Air Vapermax pink.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR VAPERMAX<a href="obuvki/vipermaxpink.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/Nike Air Vapermax evo.jpg">
+      <img src="images/Nike Air Vapermax evo.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR VAPERMAX<a href="obuvki/evo.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/Nike Air Max 95 SE.jpg">
+      <img src="images/Nike Air Max 95 SE.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MAX 95 SE<a href="obuvki/95se.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE W AF1.jpg">
+      <img src="images/NIKE W AF1.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE W AF1<a href="obuvki/af1.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE TC 7900.jpg">
+      <img src="images/NIKE TC 7900.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE TC 7900<a href="obuvki/tc700.html" target="_blank">More...</a>
+    </div>
+  </div>
+</body>
+</html>
+
+  
