--- a/obuvki/2021.html
+++ b/obuvki/2021.html
@@ -31,7 +31,7 @@
     <img src="/images/Nike Air Max 2021.jpg"  width="500" height="500"> 
    <div class="div2">
     <a class="link" href="https://www.katisport.bg/%D0%BC%D0%B0%D1%80%D0%B0%D1%82%D0%BE%D0%BD%D0%BA%D0%B8-nike-air-max--da-?tag=nike&sort=pd.name&order=ASC&limit=100">katisport</a> 
-    <a class="link" href="https://gele-sport.com/DA3199-001-maratonki-nike-air-max-2021">gale-sport</a>
+    <a class="link" href="https://gele-sport.com/DA3199-001-maratonki-nike-air-max-2021">gele-sport</a>
    </div>
 </div>
 </body>
