--- a/obuvki/SC.html
+++ b/obuvki/SC.html
@@ -31,7 +31,7 @@
     <img src="/images/Nike Air Max SC.jpg"  width="500" height="500"> 
    <div class="div2">
     <a class="link" href="https://www.gosport.bg/nike-air-max-sc-cz5358-002/">gosport</a> 
-    <a class="link" href="https://gele-sport.com/CZ5358-002-maratonki-nike-air-max-sc">gale-sport</a>
+    <a class="link" href="https://gele-sport.com/CZ5358-002-maratonki-nike-air-max-sc">gele-sport</a>
    </div>
 </div>
 </body>
