--- a/obuvki/racer.html
+++ b/obuvki/racer.html
@@ -31,7 +31,7 @@
     <img src="/images/Nike Air Max Flyknit Racer.jpg"  width="500" height="500"> 
    <div class="div2">
     <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gale-sport</a>
+    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
    </div>
 </div>
 </body>
