--- a/obuvki/2090.html
+++ b/obuvki/2090.html
@@ -31,7 +31,7 @@
     <img src="/images/Nike Air Max 2090.jpg"  width="500" height="500"> 
    <div class="div2">
     <a class="link" href="https://obuvki.bg/p/obuvki-nike-air-max-2090-bv9977-001-black-white-wolf-grey">obuvki.bg</a> 
-    <a class="link" href="https://gele-sport.com/BV9977-001-mazhki-maratonki-nike-air-max-2090">gale-sport</a>
+    <a class="link" href="https://gele-sport.com/BV9977-001-mazhki-maratonki-nike-air-max-2090">gele-sport</a>
    </div>
 </div>
 </body>
