--- a/obuvki/af1.html
+++ b/obuvki/af1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nike Air Huarache </title>
+    <title> NIKE W AF1 </title>
 <style>
     body {
     background-image: url('/images/cloud3.jpg');
@@ -28,11 +28,12 @@
 <body>
     <div class="div">
      
-    <img src="/images/Nike Air Huarache.jpg"  width="500" height="500"> 
+    <img src="/images/NIKE W AF1.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
-   </div>
+    <a class="link" href="https://gele-sport.com/DJ9946-105-damski-obuvki-nike-w-af1-plt-af-orm">gele-sport</a> 
+    <a class="link" href="https://sportshowroom.bg/nike-air-force-1-dj9946-105">sportshowroom</a>
+</div>
+</div>
 </div>
 </body>
 </html>
