--- a/obuvki/furyosa.html
+++ b/obuvki/furyosa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nike Air Huarache </title>
+    <title> NIKE AIR MAX FURYOSA </title>
 <style>
     body {
     background-image: url('/images/cloud3.jpg');
@@ -28,10 +28,10 @@
 <body>
     <div class="div">
      
-    <img src="/images/Nike Air Huarache.jpg"  width="500" height="500"> 
+    <img src="/images/Nike W Air max Furyosa.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
+    <a class="link" href="https://takeallbrands.com/nike-air-max-furyosa-archeo-pink-dh0531-001.html">takeallbrands</a> 
+    <a class="link" href="https://gele-sport.com/DH0531-101-damski-maratonki-nike-w-air-max-furyosa">gele-sport</a>
    </div>
 </div>
 </body>
