--- a/Girl's shoes.html
+++ b/Girl's shoes.html
@@ -134,6 +134,54 @@
     <div class="desc">NIKE TC 7900<a href="obuvki/tc700.html" target="_blank">More...</a>
     </div>
   </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE W AIR ZOOM PEGASUS.jpg">
+      <img src="images/NIKE W AIR ZOOM PEGASUS.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE W AIR ZOOM PEGASUS<a href="obuvki/pegasus.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/Nike Air Max revolution 6.jpg">
+      <img src="images/Nike Air Max revolution 6.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MAX REVOLUTION<a href="obuvki/revolution.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE W AIR HUARACHE CRAFT.jpg">
+      <img src="images/NIKE W AIR HUARACHE CRAFT.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE W AIR HUARACHE <a href="obuvki/huarachecraft.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE AIR MAX 90 FUTURA.jpg">
+      <img src="images/NIKE AIR MAX 90 FUTURA.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MAX 90 FUTURA <a href="obuvki/90futura.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE REACT ESCAPE.jpg">
+      <img src="images/NIKE REACT ESCAPE.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE REACT ESCAPE <a href="obuvki/escape.html" target="_blank">More...</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE AF1 CRATER FLYKNIT.jpg">
+      <img src="images/NIKE AF1 CRATER FLYKNIT.jpg" alt="Cinque Terre" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AF1 CRATER FLYKNIT <a href="obuvki/af1crater.html" target="_blank">More...</a>
+    </div>
+  </div>
 </body>
 </html>
 
