--- a/Men's shoes.html
+++ b/Men's shoes.html
@@ -95,26 +95,10 @@
   </div>
 
   <div class="gallery">
-    <a target="_blank" href="images/NIKE AIR MAX 95.jpg">
-      <img src="images/NIKE AIR MAX 95.jpg" alt="Cinque Terre" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR MAX 95  <a href="obuvki/95.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
     <a target="_blank" href="images/NIKE AIR MAX TW.jpg">
       <img src="images/NIKE AIR MAX TW.jpg" alt="Forest" width="600" height="600">
     </a>
     <div class="desc">NIKE AIR MAX TW  <a href="obuvki/TW.html" target="_blank">More...</a>
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max 97.jpg">
-      <img src="images/Nike Air Max 97.jpg" alt="Northern Lights" width="600" height="600">
-    </a>
-    <div class="desc">NIKE AIR MAX 97  <a href="obuvki/97.html" target="_blank">More...</a>
     </div>
   </div>
 
@@ -167,26 +151,42 @@
   </div>
 
   <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max 2090.jpg">
-      <img src="images/Nike Air Max 2090.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air Max 2090  <a href="obuvki/2090.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
-    <a target="_blank" href="images/Nike Air Max 2021.jpg">
-      <img src="images/Nike Air Max 2021.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">NIKE Air Max 2021  <a href="obuvki/2021.html" target="_blank">More...</a>  
-    </div>
-  </div>
-
-  <div class="gallery">
     <a target="_blank" href="images/Nike Air Max SC.jpg">
       <img src="images/Nike Air Max SC.jpg" alt="Mountains" width="600" height="600">
     </a>
     <div class="desc">NIKE Air Max SC  <a href="obuvki/SC.html" target="_blank">More...</a>  
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE AIR VAPORMAX EVO MEN.jpg">
+      <img src="images/NIKE AIR VAPORMAX EVO MEN.jpg" alt="Mountains" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR VAPORMAX <a href="obuvki/evomen.html" target="_blank">More...</a>  
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE AIR MAX 2090 men.jpg">
+      <img src="images/NIKE AIR MAX 2090 men.jpg" alt="Mountains" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MAX 2090<a href="obuvki/2090men.html" target="_blank">More...</a>  
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE AIR MAX AP.jpg">
+      <img src="images/NIKE AIR MAX AP.jpg" alt="Mountains" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR MAX AP<a href="obuvki/ap.html" target="_blank">More...</a>  
+    </div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="images/NIKE AIR VAPORMAX 2021 FK.jpg">
+      <img src="images/NIKE AIR VAPORMAX 2021 FK.jpg" alt="Mountains" width="600" height="600">
+    </a>
+    <div class="desc">NIKE AIR VAPORMAX<a href="obuvki/vapermaxfk.html" target="_blank">More...</a>  
     </div>
   </div>
 </body>
