--- a/obuvki/2090men.html
+++ b/obuvki/2090men.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nike Air Max 97 </title>
+    <title>NIKE AIR MAX 2090 C/S</title>
 <style>
     body {
     background-image: url('/images/cloud3.jpg');
@@ -28,11 +28,13 @@
 <body>
     <div class="div">
      
-    <img src="/images/Nike Air Max 97.jpg"  width="500" height="500"> 
+    <img src="/images/NIKE AIR MAX 2090 men.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
-   </div>
+    <a class="link" href="https://obuvki.bg/p/obuvki-nike-air-max-2090-c-s-dh7708-002-black-black-black">obuvki.bg</a> 
+    <a class="link" href="https://sizeer.bg/nike-air-max-2090-c-s-mazhki-maratonki-cheren-dh7708-002">sizeer</a>
+    <a class="link" href="https://gele-sport.com/DH7708-002-mazhki-maratonki-nike-air-max-2090-c-s">gele-sport</a>
+</div>
+</div>
 </div>
 </body>
 </html>
