--- a/obuvki/racer.html
+++ b/obuvki/racer.html
@@ -30,8 +30,8 @@
      
     <img src="/images/Nike Air Max Flyknit Racer.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
+    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/227632-nike-sportni-obuvki-air-max-flyknit-racer-nn-co">buzzsneakers</a> 
+    <a class="link" href="https://sizeer.bg/nike-air-max-flyknit-racer-mazhki-maratonki-cheren-dj6106-001">sizeer</a>
    </div>
 </div>
 </body>
