--- a/obuvki/revolution.html
+++ b/obuvki/revolution.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nike Air Max Dawn </title>
+    <title>NIKE AIR MAX REVOLUTION</title>
 <style>
     body {
     background-image: url('/images/cloud3.jpg');
@@ -28,10 +28,13 @@
 <body>
     <div class="div">
      
-    <img src="/images/Nike Air Max Dawn.jpg"  width="500" height="500"> 
+    <img src="/images/Nike Air Max revolution 6.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://sizeer.bg/nike-air-max-dawn-mazhki-maratonki-siv-dj3624-002">sizeer</a> 
-    </div>
+    <a class="link" href="https://gele-sport.com/DD1096-100-maratonki-nike-revolution-6-gs">gele-sport</a>
+    <a class="link" href="https://www.emag.bg/maratonki-nike-revolution-6-gs-dd1096-100-39-bjal-dd1096-100-39/pd/D8KW98MBM/">emag</a>
+    <a class="link" href="https://cornersport.eu/damski-maratonki-nike-revolution-6-dd1096-100">cornersport</a>
+</div>
+</div>
 </div>
 </body>
 </html>
