--- a/obuvki/270.html
+++ b/obuvki/270.html
@@ -30,8 +30,8 @@
      
     <img src="/images/nike air max 270.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
+    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/30043-nike-sportni-obuvki-w-air-max-270">buzzsneakers</a> 
+    <a class="link" href="https://sizeer.bg/nike-air-max-270-black-white-womens-damski-maratonki-cheren-ah6789-001">sizeer</a>
    </div>
 </div>
 </body>
