--- a/obuvki/90futura.html
+++ b/obuvki/90futura.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nike Air Max Dawn </title>
+    <title> NIKE AIR MAX 90 FUTURA </title>
 <style>
     body {
     background-image: url('/images/cloud3.jpg');
@@ -28,10 +28,11 @@
 <body>
     <div class="div">
      
-    <img src="/images/Nike Air Max Dawn.jpg"  width="500" height="500"> 
+    <img src="/images/NIKE AIR MAX 90 FUTURA.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://sizeer.bg/nike-air-max-dawn-mazhki-maratonki-siv-dj3624-002">sizeer</a> 
-    </div>
+    <a class="link" href="https://sizeer.bg/nike-air-max-90-futura-damski-maratonki-menta-dm9922-105">sizeer</a> 
+    <a class="link" href="https://gele-sport.com/DM9922-105-damski-maratonki-nike-air-max-90-futura">gele-sport</a>
+   </div>
 </div>
 </body>
 </html>
