--- a/obuvki/coart.html
+++ b/obuvki/coart.html
@@ -30,8 +30,8 @@
      
     <img src="/images/nike coart vision.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
+    <a class="link" href="https://www.sportvision.bg/maratonki/232901-nike-maratonki-nike-court-vision-lo-nn">sportvision</a> 
+    <a class="link" href="https://gele-sport.com/DH2987-106-mazhki-obuvki-nike-court-vision-lo-nn">gele-sport</a>
    </div>
 </div>
 </body>
