--- a/obuvki/force.html
+++ b/obuvki/force.html
@@ -30,8 +30,8 @@
      
     <img src="/images/Nike Air Force 1.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
+    <a class="link" href="https://sizeer.bg/nike-air-force-1-low-mazhki-maratonki-byal-cw2288-111?_gl=1*bdzkp5*_up*MQ..&gclid=CjwKCAjws7WkBhBFEiwAIi168645iSkfVf-QNKmisRJrs_Gq6hFjLSCP0pvdwLTSnP4rB0qHd8RNAhoCGTYQAvD_BwE">sizeer</a> 
+    <a class="link" href="https://gele-sport.com/DH2920-111-sportni-obuvki-nike-air-force-1-le-bg">gele-sport</a>
    </div>
 </div>
 </body>
