--- a/obuvki/huarachecraft.html
+++ b/obuvki/huarachecraft.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nike Air Max 95</title>
+    <title>NIKE W AIR HUARACHE CRAFT</title>
 <style>
     body {
     background-image: url('/images/cloud3.jpg');
@@ -28,11 +28,12 @@
 <body>
     <div class="div">
      
-    <img src="/images/NIKE AIR MAX 95.jpg"  width="500" height="500"> 
+    <img src="/images/NIKE W AIR HUARACHE CRAFT.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
-   </div>
+    <a class="link" href="https://sportshowroom.bg/nike-air-huarache-dq8031-002">sportshowroom</a>
+    <a class="link" href="https://lotus-sport.bg/DQ8031-002-damski-maratonki-nike-air-huarache-craft-lt-green-lt-silver">lotus-sport</a>
+</div>
+</div>
 </div>
 </body>
 </html>
