--- a/obuvki/pegasus.html
+++ b/obuvki/pegasus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nike Air Max 2090 </title>
+    <title>NIKE W AIR ZOOM PEGASUS</title>
 <style>
     body {
     background-image: url('/images/cloud3.jpg');
@@ -28,11 +28,12 @@
 <body>
     <div class="div">
      
-    <img src="/images/Nike Air Max 2090.jpg"  width="500" height="500"> 
+    <img src="/images/NIKE W AIR ZOOM PEGASUS.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://obuvki.bg/p/obuvki-nike-air-max-2090-bv9977-001-black-white-wolf-grey">obuvki.bg</a> 
-    <a class="link" href="https://gele-sport.com/BV9977-001-mazhki-maratonki-nike-air-max-2090">gele-sport</a>
-   </div>
+    <a class="link" href="https://gele-sport.com/DV3854-102-damski-maratonki-nike-w-air-zoom-pegasus-40">gele-sport</a>
+    <a class="link" href="https://sportshowroom.bg/nike-pegasus-dv3854-102">sportshowroom</a>
+</div>
+</div>
 </div>
 </body>
 </html>
