--- a/obuvki/react.html
+++ b/obuvki/react.html
@@ -30,8 +30,9 @@
      
     <img src="/images/Nike React Vision.jpg"  width="500" height="500"> 
    <div class="div2">
-    <a class="link" href="https://www.buzzsneakers.bg/sportni-obuvki/90647-nike-sportni-obuvki-air-max-90-365?gclid=CjwKCAjwpayjBhAnEiwA-7enaxlviHSgipaJDBRdJIMy_8sjVY2Ai3BAhcHx0eZ06P24fq3ZEuVTmBoCklMQAvD_BwE">buzzsneakers</a> 
-    <a class="link" href="https://gele-sport.com/CN8490-100-mazhki-maratonki-nike-air-max-90-365">gele-sport</a>
+    <a class="link" href="https://www.footshop.bg/bg/muzhki-kecove-i-obuvki/53234-nike-react-vision-black-white-black.html">footshop</a> 
+    <a class="link" href="https://www.glami.bg/nike/nike-react-vision-black-white-black-2475495/">glami</a>
+    <a class="link" href="https://lotus-sport.bg/CD4373-006-mazhki-maratonki-nike-react-vision-black-white">lotus-sport</a>
    </div>
 </div>
 </body>
